tests/NormalTests/paczka1/small_fuzzy/28850878.err
Error in line 5: S4 S837 91,5
Error in line 10: S4 S837 355,9
Error in line 13: S4 A322 94,3
Error in line 4: C7FaHct S837 69,1
